force-app/main/default/objects/Agent_Opportunity__c/Agent_Opportunity__c.object-meta.xml
<CustomObject>
    <label>Agent Opportunity</label>
    <pluralLabel>Agent Opportunities</pluralLabel>
    <description>Object used to track and manage AI agent opportunities identified through Jobs-to-be-Done analysis. Stores potential automation opportunities, technical requirements, and implementation details for Agentforce solutions.</description>
    <nameField>
        <label>Opportunity Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>