force-app/main/default/objects/Agent_Opportunity__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <description>Detailed description of the agent opportunity including functionality, use case, and business value</description>
    <inlineHelpText>Provide a comprehensive description of what this agent would do, how it would help users, and the specific business value it would deliver.</inlineHelpText>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>