force-app/main/default/objects/Agent_Opportunity__c/fields/Estimated_Impact__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Impact__c</fullName>
    <label>Estimated Impact</label>
    <description>Expected business impact and value delivery from implementing this agent opportunity</description>
    <inlineHelpText>Assess the potential impact on efficiency, user experience, cost savings, or revenue generation. Consider both quantitative and qualitative benefits.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transformational</fullName>
            </value>
            <value>
                <fullName>Significant</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
                <default>true</default>
                <label>Moderate</label>
            </value>
            <value>
                <fullName>Minor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>