force-app/main/default/objects/Agent_Opportunity__c/fields/Integrations__c.field-meta.xml
<CustomField>
    <fullName>Integrations__c</fullName>
    <label>Integrations</label>
    <description>External systems, APIs, and third-party platforms this agent needs to integrate with</description>
    <inlineHelpText>List the external systems, APIs, databases, or third-party platforms this agent would need to connect with to deliver its functionality.</inlineHelpText>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>