force-app/main/default/objects/Agent_Opportunity__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <description>Business priority level for implementing this agent opportunity</description>
    <inlineHelpText>Select the priority based on business impact, effort required, and strategic importance. High = immediate need, Medium = near-term, Low = future consideration.</inlineHelpText>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
                <default>true</default>
                <label>Medium</label>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>