force-app/main/default/objects/Agent_Opportunity__c/fields/Related_Job__c.field-meta.xml
<CustomField>
    <fullName>Related_Job__c</fullName>
    <label>Related Job</label>
    <description>Primary JTBD job that this agent opportunity addresses or automates</description>
    <inlineHelpText>Select the main job this agent opportunity would help with. If this agent addresses multiple jobs, choose the primary one.</inlineHelpText>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>JTBD_Job__c</referenceTo>
    <relationshipLabel>Agent Opportunities</relationshipLabel>
    <relationshipName>Agent_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>