force-app/main/default/objects/Agent_Opportunity__c/fields/Technical_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Technical_Requirements__c</fullName>
    <label>Technical Requirements</label>
    <description>Technical specifications, data access needs, and implementation requirements for building this agent</description>
    <inlineHelpText>Document the technical needs including data sources, APIs, permissions, custom objects/fields, flows, and any special considerations for implementation.</inlineHelpText>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>